--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="./src/css/reset.css">
-    <link rel="stylesheet" href="./src/css/estilos.css">
-    <link rel="stylesheet" href="./src/css/scrollbar.css">
+    <link rel="stylesheet" href="../src/css/reset.css">
+    <link rel="stylesheet" href="../src/css/estilos.css">
+    <link rel="stylesheet" href="../src/css/scrollbar.css">
 </head>
 <body>
     <header>
-        <a href="#">
-            <img src="./src/img/imagens/pokeball.png" alt="pokeball" class="logo">
-        </a>
+        <nav>
+            <a href="./index.html">
+                <img src="../src/img/imagens/pokeball2.png" alt="pokeball" class="logo">
+            </a>
+            <a href="./src/pages/kanto.html">
+                <img src="../src/img/imagens/premier.png" alt="pokeball" class="logo">
+            </a>
+            <a href="./src/pages/jhoto.html">
+                <img src="../src/img/imagens/great.png" alt="pokeball" class="logo">
+            </a>
+        </nav>
         <button id="botao-alterar-tema">
-            <img src="./src/img/imagens/sun.png" alt="sol" class="imagem-botao">
+            <img src="../src/img/imagens/sun.png" alt="sol" class="imagem-botao">
         </button>
     </header>
         <main>
@@ -29,7 +37,7 @@
                         <span>Bulbasaur</span>
                         <span>#001</span>
                     </div>
-                    <img src="./src/img/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif">
+                    <img src="../src/img/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif">
                     <ul class="tipos">
                         <li class="tipo grama">Grama</li>
                         <li class="tipo veneno">Veneno</li>
@@ -41,7 +49,7 @@
                         <span>Ivysaur</span>
                         <span>#002</span>
                     </div>
-                    <img src="./src/img/imagens/ivysaur.gif" alt="Ivysaur" class="gif">
+                    <img src="../src/img/imagens/ivysaur.gif" alt="Ivysaur" class="gif">
                     <ul class="tipos">
                         <li class="tipo grama">Grama</li>
                         <li class="tipo veneno">Veneno</li>
@@ -53,7 +61,7 @@
                         <span>Venusaur</span>
                         <span>#003</span>
                     </div>
-                    <img src="./src/img/imagens/venusaur.gif" alt="Venusaur" class="gif">
+                    <img src="../src/img/imagens/venusaur.gif" alt="Venusaur" class="gif">
                     <ul class="tipos">
                         <li class="tipo grama">Grama</li>
                         <li class="tipo veneno">Veneno</li>
@@ -65,7 +73,7 @@
                         <span>Charmander</span>
                         <span>#004</span>
                     </div>
-                    <img src="./src/img/imagens/charmander.gif" alt="Charmander" class="gif">
+                    <img src="../src/img/imagens/charmander.gif" alt="Charmander" class="gif">
                     <ul class="tipos">
                         <li class="tipo fogo">Fogo</li>
                     </ul>
@@ -76,7 +84,7 @@
                         <span>Charmeleon</span>
                         <span>#005</span>
                     </div>
-                    <img src="./src/img/imagens/charmeleon.gif" alt="Charmeleon" class="gif">
+                    <img src="../src/img/imagens/charmeleon.gif" alt="Charmeleon" class="gif">
                     <ul class="tipos">
                         <li class="tipo fogo">Fogo</li>
                     </ul>
@@ -87,7 +95,7 @@
                         <span>Charizard</span>
                         <span>#006</span>
                     </div>
-                    <img src="./src/img/imagens/charizard.gif" alt="Charizard" class="gif">
+                    <img src="../src/img/imagens/charizard.gif" alt="Charizard" class="gif">
                     <ul class="tipos">
                         <li class="tipo fogo">Fogo</li>
                     </ul>
@@ -98,7 +106,7 @@
                         <span>Squirtle</span>
                         <span>#007</span>
                     </div>
-                    <img src="./src/img/imagens/squirtle.gif" alt="Squirtle" class="gif">
+                    <img src="../src/img/imagens/squirtle.gif" alt="Squirtle" class="gif">
                     <ul class="tipos">
                         <li class="tipo agua">Água</li>
                     </ul>
@@ -109,7 +117,7 @@
                         <span>Wartortle</span>
                         <span>#008</span>
                     </div>
-                    <img src="./src/img/imagens/wartortle.gif" alt="Wartortle" class="gif">
+                    <img src="../src/img/imagens/wartortle.gif" alt="Wartortle" class="gif">
                     <ul class="tipos">
                         <li class="tipo agua">Água</li>
                     </ul>
@@ -120,7 +128,7 @@
                         <span>Blastoise</span>
                         <span>#009</span>
                     </div>
-                    <img src="./src/img/imagens/blastoise.gif" alt="Blastoise" class="gif">
+                    <img src="../src/img/imagens/blastoise.gif" alt="Blastoise" class="gif">
                     <ul class="tipos">
                         <li class="tipo agua">Água</li>
                     </ul>
@@ -131,7 +139,7 @@
                         <span>Caterpie</span>
                         <span>#010</span>
                     </div>
-                    <img src="./src/img/imagens/caterpie.gif" alt="Caterpie" class="gif">
+                    <img src="../src/img/imagens/caterpie.gif" alt="Caterpie" class="gif">
                     <ul class="tipos">
                         <li class="tipo inseto">Inseto</li>
                     </ul>
@@ -140,6 +148,7 @@
 
             </ul>
         </main>
-    <script src="./src/js/index.js"></script>
+    <script src="../src/js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
