--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <link rel="stylesheet" href="../src/css/scrollbar.css">
 </head>
 <body>
+      <!-- Modal -->
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Welcome to the Pokedex!</h2>
+        <p>This project started showing only the first 10 Pokemon and now uses fetch to bring Kanto and Jhoto information! Have fun navigating arond the three options!</p>
+        </div>
+    </div>
     <header>
         <nav>
             <a href="./index.html">
